# learn-playwright

./: .env.example  README.md  pyproject.toml
examples/: test_api_auth_example.py  test_api_example.py  test_google_title.py
